; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_create_private_id.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-scene.c_create_private_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*)* @create_private_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @create_private_id(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.obs_source*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call %struct.obs_source* @obs_source_create_private(i8* %6, i8* %7, i32* null)
  store %struct.obs_source* %8, %struct.obs_source** %5, align 8
  %9 = load %struct.obs_source*, %struct.obs_source** %5, align 8
  %10 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  ret i32* %12
}

declare dso_local %struct.obs_source* @obs_source_create_private(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
